<resources>
    <string name="app_name">e-Tlak</string>
    <string name="title_activity_registracija">RegistracijaActivity</string>
    <string name="title_activity_prijava">PrijavaActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_unos">UnosActivity</string>
    <string name="title_activity_unos_masa">UnosMasaActivity</string>
    <string name="title_activity_dijagnoza">DijagnozaActivity</string>
    <string name="title_activity_povijest">PovijestActivity</string>
    <string name="splashscreen_picture">splashscreen_picture</string>
    <string name="registracija_picture">registracija_picture</string>
    <string name="korisnicko_ime">Korisničko ime</string>
    <string name="lozinka">Lozinka</string>
    <string name="registracija">REGISTRACIJA</string>
    <string name="registracija_text">Već imate račun?</string>
    <string name="registracija_link">" PRIJAVITE SE!"</string>
    <string name="prijava_picture">prijava_picture</string>
    <string name="prijava">PRIJAVA</string>
    <string name="prijava_text">Nemate račun?</string>
    <string name="prijava_link">" REGISTRIRAJTE SE!"</string>
    <string name="zadnje_mjerenje">"Zadnje mjerenje: "</string>
    <string name="vrijeme">VRIJEME</string>
    <string name="tlak">TLAK</string>
    <string name="sys">SYS</string>
    <string name="dia">DIA</string>
    <string name="puls">PULS</string>
    <string name="srce">❤</string>
    <string name="dodaj_tlak_picture">dodajTlak_picture</string>
    <string name="dijagnoza_picture">dijagnoza_picture</string>
    <string name="masa_picture">masa_picture</string>
    <string name="masa_kg">Masa/kg</string>
    <string name="obrisi">" OBRIŠI "</string>
    <string name="natrag">" NATRAG "</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="tocka">.</string>
    <string name="ok">OK</string>
</resources>
