<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center|top"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".unos.UnosMasaActivity"
    android:id="@+id/unos_masa_layout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/masa_kg"
        android:textColor="@color/color_accent"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_masa_kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/color_accent"
        android:gravity="center"
        android:inputType="number"
        android:minWidth="160dp"
        android:textColor="@color/black_overlay"
        android:textSize="45sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        tools:targetApi="lollipop" />


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_1"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_2"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_3"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_4"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_5"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_6"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_7"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_8"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_9"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_brisanje"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/color_primary"
                    android:text="@string/c"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/black_overlay"
                    android:onClick="onClickNumberButton"
                    android:text="@string/_0"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

                <Button
                    android:id="@+id/button_tocka"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/color_primary"
                    android:text="@string/tocka"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_unos"
                    android:layout_width="104dp"
                    android:layout_height="65dp"
                    android:layout_marginLeft="113dp"
                    android:layout_marginStart="113dp"
                    android:background="@drawable/background_rounded_corners"
                    android:backgroundTint="@color/color_accent"
                    android:text="@string/ok"
                    android:textColor="#FFFFFF"
                    android:textSize="40sp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

        </TableLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>