<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".prijava.PrijavaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="81dp"
        android:contentDescription="@string/prijava_picture"
        android:src="@drawable/login"
        android:layout_marginBottom="25dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_username_login"/>

    <TextView
        android:id="@+id/tv_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/korisnicko_ime"
        android:textColor="@color/color_accent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/et_username_login"/>

    <EditText
        android:id="@+id/et_username_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_accent"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/black_overlay"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_password_login"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/tv_password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lozinka"
        android:textColor="@color/color_accent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_prijava">

        <EditText
            android:id="@+id/et_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_accent"
            android:inputType="textPassword"
            android:textColor="@color/black_overlay"
            android:textSize="30sp"
            tools:targetApi="lollipop" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_prijava"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/background_rounded_corners"
        android:text="@string/prijava"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        android:layout_marginBottom="15dp"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"/>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prijava_text"
            android:textAlignment="center"
            android:textColor="@color/color_accent"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="425dp" />

        <TextView
            android:id="@+id/textViewLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prijava_link"
            android:textAlignment="center"
            android:textColor="@color/color_unos"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="425dp" />
    </TableRow>

</android.support.constraint.ConstraintLayout>